# nord_higienge_web

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  dre_page_all.html  main.py  pyproject.toml  requirements_web.txt  run_celery.py  run_flask.py  run_redis.sh  teste.py
.claude/: settings.json
app/: __init__.py  config.py
app/models/: credential.py  item.py  job.py  job_log.py  keyword.py
app/routes/: api.py  dashboard.py  socket_events.py
app/services/: credential_service.py  file_service.py  job_service.py  keyword_service.py
app/static/css/: styles.css
app/static/js/: config.js  dashboard.js  items.js  jobs.js  main.js  reports.js  socket.js
app/tasks/: celery_app.py  pipeline.py
app/templates/: base.html  config.html  dashboard.html  items.html  jobs.html  reports.html
app/utils/: encryption.py
automation/: acingov.py  automation.py  download_manager.py  dre.py  driver.py  lists.py  logger.py  report.py  vortal.py  words.py
data/: database.db
scripts/: e2e_test.py  run_e2e_integration.py  wait_for_service.sh
